--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         </div>
     </div>
 
-    <!-- Comment Box Section -->
     <div class="comment-section">
         <div class="container">
             <h2>📝 Suggest an Exam</h2>
-            <form id="suggestionForm" class="suggestion-form">
+            <p class="suggestion-subtitle">Share exam suggestions • Empower learners</p>
+            <form id="suggestionForm" class="suggestion-form" novalidate>
                 <div class="form-group">
                     <label for="examName">Exam Name *</label>
                     <input type="text" id="examName" name="examName" placeholder="Enter exam name" required>
@@ -77,7 +77,7 @@
 
     <footer>
         <div class="footer-content">
-            Developed by <span class="footer-name" onclick="visitPortfolio()">Rahul Timbaliya</span> | © 2024 CertVerse ✨
+            Developed by <span class="footer-name" onclick="visitPortfolio()">Rahul Timbaliya</span> | © 2025 CertVerse ✨
         </div>
     </footer>
 
