add login and registation form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CertVerse - Certification Exams</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="script/prevent.js"></script>
 </head>
 <body>
     <header>
@@ -14,6 +15,9 @@
                 <span class="logo-text">CertVerse</span>
             </div>
             <p class="tagline">Master Your Certifications • Explore, Learn & Achieve</p>
+            <div id="authActions" class="header-auth">
+                <!-- Filled dynamically: user greeting / logout -->
+            </div>
         </div>
     </header>
 
