--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Login - CertVerse</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/login.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="script/prevent.js"></script>
 </head>
 <body class="auth-bg" data-login-endpoint="/api/auth/login">
