--- a/registration.html
+++ b/registration.html
@@ -6,6 +6,7 @@
     <title>Register - CertVerse</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/registration.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="script/prevent.js"></script>
 </head>
 <body class="auth-bg" data-register-endpoint="/api/auth/register">
