--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CertVerse - Certification Exams</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="script/prevent.js"></script>
 </head>
 <body>
