--- a/admin/index.html
+++ b/admin/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
     <link rel="stylesheet" href="style/admin.css">
+    <script src="../script/prevent.js"></script>
 </head>
 
 <body>
