--- a/admin/login.html
+++ b/admin/login.html
@@ -6,6 +6,7 @@
     <title>CertVerse - Admin Login</title>
     <link rel="stylesheet" href="../style/style.css">   
     <link rel="stylesheet" href="style/login.css">
+    <script src="../script/prevent.js"></script>
 </head>
 <body>
     <div class="container" style="display: flex; justify-content: center; align-items: center; min-height: 100vh; padding: 20px;">
